tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Care_Plan_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Reviewed__c</fullName>
    <label>Care Plan Reviewed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the care plan has been reviewed with the client during this interaction.</description>
</CustomField>