tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Discharge_Plan__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Plan__c</fullName>
    <label>Discharge Plan</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Discharge planning notes and details for this care plan.</description>
</CustomField>