tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Documentation_Offered__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Offered__c</fullName>
    <label>Documentation Offered</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether documentation was offered to the client during this care plan session. Referenced in PendingDocumentationController and InterviewSessionController.</description>
</CustomField>