tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Expected_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Discharge_Date__c</fullName>
    <label>Expected Discharge Date</label>
    <type>Date</type>
    <description>The anticipated date the client will be discharged from the care plan. Referenced in PendingDocumentationController and InterviewSessionController.</description>
</CustomField>