tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Review_Date__c</fullName>
    <label>Last Review Date</label>
    <type>Date</type>
    <description>Date of the most recent Care Plan review. Updated automatically when a Clinical Note review is completed.</description>
    <inlineHelpText>The date when this Care Plan was last reviewed with the participant.</inlineHelpText>
</CustomField>