tgthrProgramManagement/force-app/main/default/objects/CarePlan/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <label>Next Review Date</label>
    <type>Date</type>
    <description>Date when the next Care Plan review is due. Calculated based on review frequency when a review is completed.</description>
    <inlineHelpText>The scheduled date for the next Care Plan review.</inlineHelpText>
</CustomField>